--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <input type="button" value="Contact Us" class="btn f-16-500 header__main__btn">
             </div>
             <div class="buscard">
-                <img src="media/img/card_profile_doctor_photo_1.webp" class="buscard__photo">
+                <img src="media/img/card_profile_doctor_photo_1.webp" class="buscard__photo" loading="lazy" alt="doctor's photo">
                 <p class="f-14-700 black buscard__title">Dr.Shimanta</p>
                 <p class="f-12-400 grey buscard__descr">Skin specialst</p>
                 <input type="button" value="Make Shedule" class="btn buscard__button">
@@ -46,22 +46,22 @@
             <p class="f-32-700 title__description">Step by step to get your solutions</p>
             <div class="mainblock1__cards">
                 <div class="card">
-                    <img src="media/icons/find.svg">
+                    <img src="media/icons/find.svg" alt="icon: magnifying glass">
                     <h4 class="f-14-700">Check health complaints</h4>
                     <p class="f-12-400">Check the disease so you can easily choose the right specialist</p>
                 </div>
                 <div class="card">
-                    <img src="media/icons/people.svg">
+                    <img src="media/icons/people.svg" alt="icon: people">
                     <h4 class="f-14-700">Choose doctor Specialist</h4>
                     <p class="f-12-400">Choose a specialist according to your disease complaints</p>
                 </div>
                 <div class="card">
-                    <img src="media/icons/calendar.svg">
+                    <img src="media/icons/calendar.svg" alt="icon: calendar">
                     <h4 class="f-14-700">Make a Schedule</h4>
                     <p class="f-12-400">Make a schedule with the doctor concerned so you can start the examination</p>
                 </div>
                 <div class="card">
-                    <img src="media/icons/star.svg">
+                    <img src="media/icons/star.svg" alt="icon: star">
                     <h4 class="f-14-700">Get your Solutions</h4>
                     <p class="f-12-400">After conducting an examination with a specialist we can help find the right healing method</p>
                 </div>
@@ -81,12 +81,12 @@
                     <h3 class="f-14-700 black">Available Doctors</h3>
                     <p class="f-12-400 grey">Select Doctors</p>
                     <div class="avlistdoct__item">
-                        <img src="media/img/card_profile_doctor_photo_2.webp" class="item__img">
+                        <img src="media/img/card_profile_doctor_photo_2.webp" class="item__img" loading="lazy" alt="doctor's photo">
                         <p class="f-14-700 black item__name">Dr. Adinda</p>
                         <p class="f-12-400 grey item__profile">Eye Specialist</p>
                     </div>
                     <div class="avlistdoct__item">
-                        <img src="media/img/card_profile_doctor_photo_3.webp" class="item__img">
+                        <img src="media/img/card_profile_doctor_photo_3.webp" class="item__img" loading="lazy" alt="doctor's photo">
                         <p class="f-14-700 black item__name">Dr. Jackson</p>
                         <p class="f-12-400 grey item__profile">Ear Specialist</p>
                     </div>
@@ -96,7 +96,7 @@
         </div>
         <div class="mainblock3">
             <div class="mainblock3__left">
-                <img src="media/img/photo_3.webp" class="mainblock3__photo">
+                <img src="media/img/photo_3.webp" class="mainblock3__photo" loading="lazy" alt="two doctors talking in the office">
             </div>
             <div class="mainblock3__right">
                 <p class="f-14-700 primary">Make a Shedule</p>
@@ -134,7 +134,7 @@
             <div class="slides">
                 <div class="photo">
                     <div class="photo__wrapper">
-                        <img src="media/img/photo_4.webp">
+                        <img src="media/img/photo_4.webp" loading="lazy" alt="doctor's photo">
                     </div>
                 </div>
                 <div class="descr">
@@ -143,8 +143,8 @@
                 <div class="control">
                     <p class="f-20-700 black slideshow__name">Naufal Hidayat</p>
                     <p class="f-14-700 grey slideshow__prof">Student at Telkom University</p>
-                    <img src="media/icons/arrow-to-left.svg" class="slideshow__arrowleft">
-                    <img src="media/icons/arrow-to-right.svg" class="slideshow__arrowright">
+                    <img src="media/icons/arrow-to-left.svg" class="slideshow__arrowleft" alt="scroll right button">
+                    <img src="media/icons/arrow-to-right.svg" class="slideshow__arrowright" alt="scroll left button">
                 </div>
             </div>
         </div>
@@ -180,9 +180,9 @@
                 <h4 class="f-20-700 black link__title">Social media</h4>
             </div>
             <div>
-                <a href="#"><img src="media/icons/icon-fb.svg"></a>
-                <a href="#"><img src="media/icons/icon-inst.svg"></a>
-                <a href="#"><img src="media/icons/icon-tw.svg"></a>
+                <a href="#"><img src="media/icons/icon-fb.svg" alt="link to facebook"></a>
+                <a href="#"><img src="media/icons/icon-inst.svg" alt="link to instagram"></a>
+                <a href="#"><img src="media/icons/icon-tw.svg" alt="link to twitter"></a>
             </div>
         </div>
     </footer>
